--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "7.2.0",
     "jest": "^27.3.1",
     "parcel-bundler": "^1.6.1",
+    "sass": "^1.49.7",
     "typescript": "^4.4.4"
   },
   "keywords": []
