Cd into backend in deploy lambda

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,4 +52,6 @@ jobs:
 
       - name: Deploy-Lambda
         run: |
+          cd ./backend
+          yarn
           cdk deploy --profile portfolio
