--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "yarn build && parcel index.html",
     "prebuild": "rm -rf dist && mkdir -p dist/assets && cp -R src/assets dist",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html src/assets/**/*"
   },
   "dependencies": {
     "detect-gpu": "0.0.40",
