--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,32 +13,22 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16  
+
+      - uses: aws-actions/configure-aws-credentials@v2
+        with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: eu-west-1
+
+      - name: Rest of Environment setting
         run: |
-          sudo apt install nodejs
-          node -v
-          sudo apt install npm
-          npm -v
-          npm install -g aws-cdk
-          cdk --version
-          sudo apt install jq
-          jq --version
+              sudo apt update
 
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install --update
-          aws --version
-
-
-
-      - name: Configure AWS
-        run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set region eu-west-1
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} --profile portfolio
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}  --profile portfolio
-          aws configure set region eu-west-1  --profile portfolio
+              sudo apt install jq
+              jq --version
 
       - name: Build-Selenium-Layer
         run: |
@@ -53,4 +43,4 @@ jobs:
         run: |
           cd ./backend
           yarn
-          cdk deploy --profile portfolio
+          cdk deploy
