--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
-  spelling-bee:
+  gameboy:
     container_name: gameboy-website
     build:
       context: .
     ports:
       - 1234:1234
     volumes:
-      - ./frontend/:/app
+      - ./gameboy/:/app
